--- a/Matrizapp/src/app/componentes/rkmain/rkmain.component.scss
+++ b/Matrizapp/src/app/componentes/rkmain/rkmain.component.scss
@@ -806,3 +806,11 @@ a .indicadorEstado {
 //     height: 50px;
 //     width: 50px;
 // }
+
+
+// tareaInconclusa
+
+.tareaInconclusa{
+    color: #212529;
+    text-decoration: underline  #c51919 
+}
