--- a/Matrizapp/src/app/componentes/rkmain/rkt/rkt.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/rkt/rkt.component.html
@@ -4,9 +4,9 @@
     
 
     <button *ngIf="boton === 'creador' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(tareaModel.key,tareaModel.tareaStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
-    <button *ngIf="boton === 'validador' || boton === 'aprobador' "  mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(tareaModel.key,tareaModel.tareaStatusId)">Editar</button>
-    <button *ngIf="boton === 'validador'  " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(tareaModel.key,tareaModel.tareaStatusId,'IV')">Validar</button>
-    <button *ngIf="boton === 'aprobador' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(tareaModel.key,tareaModel.tareaStatusId,'IA')">Aprobar</button>
+    <button *ngIf="boton === 'validador' || boton === 'aprobador' "  mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(tareaModel.key,tareaModel.tareaStatusId,true)">Rechazar</button>
+    <button *ngIf="boton === 'validador'  " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(tareaModel.key,tareaModel.tareaStatusId)">Validar</button>
+    <button *ngIf="boton === 'aprobador' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(tareaModel.key,tareaModel.tareaStatusId)">Aprobar</button>
 </h6>
 
 
@@ -118,6 +118,16 @@
                         </div>
 
                     </div>
+
+                    <div class="divide">
+                        
+                        <button  class="btn btn-sm btn-light btn-round pl-1"  (click)="generarReporte()"> <img
+                            class="img-circle"
+                            src="assets/images/excel.png"
+                            style="width: 20px; height: 20px"
+                          />Generar Reporte</button>
+                    
+                </div>
                 </div>
             </div>
         </div>
