--- a/Matrizapp/src/app/rk-reason-reject/rk-reason-reject.component.html
+++ b/Matrizapp/src/app/rk-reason-reject/rk-reason-reject.component.html
@@ -1,16 +1,19 @@
 <h1 mat-dialog-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>
 
-    {{ data.title }} </h1>
+    Razón de rechazo </h1>
 
 <mat-dialog-content>
-
-    <textarea type="text" id="form7" maxlength="960" [(ngModel)]="razon" class="md-textarea " style=" vertical-align: top;"></textarea>
+    
+    <hr>
+    <textarea type="text"  [(ngModel)]="razon" class="md-textarea "  style=" vertical-align: top;"></textarea>
     <!-- <label for="form7">Auto resizing textarea</label> -->
 
 </mat-dialog-content>
+<h5>{{razon.length}}/300</h5>
 <mat-dialog-actions align="end">
     <!-- <button mat-raised-button color="warn" (click)="cerrar()">{{ data.button_close }}</button> -->
-    <button mat-raised-button color="primary" (click)="EnviarRazon()">{{ data.button_confirm }}</button>
+    <button mat-raised-button color="warn" (click)="cerrar()">Cancelar</button>
+    <button mat-raised-button color="primary" (click)="aceptar()">Aceptar</button>
 
 
 
