--- a/Matrizapp/src/app/componentes/rkmain/rkp/rkp.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/rkp/rkp.component.html
@@ -2,9 +2,9 @@
     Area > Proceso
     <!-- <button *ngIf="procesoModel.procesoStatusId !=='008' && procesoModel.CanAdd " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(procesoModel.key,procesoModel.procesoStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button> -->
     <button *ngIf="boton === 'creador' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(procesoModel.key,procesoModel.procesoStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
-    <button *ngIf="boton === 'validador' || boton === 'aprobador' "  mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(procesoModel.key,procesoModel.procesoStatusId)">Editar</button>
-    <button *ngIf="boton === 'validador'  " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(procesoModel.key,procesoModel.procesoStatusId,'IV')">Validar</button>
-    <button *ngIf="boton === 'aprobador' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(procesoModel.key,procesoModel.procesoStatusId,'IA')">Aprobar</button>
+    <button *ngIf="boton === 'validador' || boton === 'aprobador' "  mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(procesoModel.key,procesoModel.procesoStatusId,true)">Rechazar</button>
+    <button *ngIf="boton === 'validador'  " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(procesoModel.key,procesoModel.procesoStatusId)">Validar</button>
+    <button *ngIf="boton === 'aprobador' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(procesoModel.key,procesoModel.procesoStatusId)">Aprobar</button>
 </h6>
 
 
@@ -79,7 +79,7 @@
                             class="img-circle"
                             src="assets/images/excel.png"
                             style="width: 20px; height: 20px"
-                          />Descargar Excel</button>
+                          />Generar Reporte</button>
                     </div>
                 </div>
             </div>
