--- a/Matrizapp/src/app/componentes/rkmain/rkpend/rkpend.component.scss
+++ b/Matrizapp/src/app/componentes/rkmain/rkpend/rkpend.component.scss
@@ -32,18 +32,18 @@
 // }
 .cebra .sticky {
     position: sticky;
-    min-width: 60px !important;
-    left: 0;
+    min-width: auto !important;
+    // left: 0;
 }
 
 .cebra .sticky2 {
     position: sticky;
-    min-width: 90px !important;
-    left: 60px;
+    min-width: auto !important;
+    // left: 60px;
 }
 
 .cebra .fecha {
-    min-width: 120px !important;
+    min-width: auto !important;
 }
 
 .cebra {
@@ -60,11 +60,11 @@
     position: sticky;
     background: #333;
     color: white;
-    left: 150px;
+    // left: 150px;
 }
 
 #filtro {
-    min-width: 200px;
+    min-width: auto;
 }
 
 // .cebra thead th {
@@ -74,7 +74,7 @@
 .cebra th,
 .cebra td {
     border-right: solid 1px #ccc;
-    min-width: 200px;
+    min-width: auto !important;
     padding: 0.5rem;
     text-align: left;
     cursor: text;
@@ -318,8 +318,29 @@ h4 {
     font-size: 20px;
 }
 
+.botonesAccion{
+    top: 0;
+    font-size: 10px;
+    // float: right !important;
+}
+
 .limpiar {
     color: rgb(241, 233, 233);
     background-color: #333;
     cursor: pointer;
+}
+
+
+.dialogo{
+    display: block;
+    padding: 24px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    overflow: auto;
+    outline: 0;
+    width: 100%;
+    height: 100%;
+    min-height: inherit;
+    max-height: inherit;
+    
 }
