--- a/Matrizapp/src/app/componentes/rkmain/rks/rks.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/rks/rks.component.html
@@ -2,7 +2,7 @@
     Area > Proceso > Subproceso
     <!-- <button *ngIf="subprocesoModel.subprocesoStatusId !=='008' && subprocesoModel.CanAdd==='true' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(subprocesoModel.key,subprocesoModel.subprocesoStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button> -->
     <button *ngIf="boton === 'creador' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(subprocesoModel.key,subprocesoModel.subprocesoStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
-    <button *ngIf="boton === 'validador' || boton === 'aprobador' "  mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(subprocesoModel.key,subprocesoModel.subprocesoStatusId)">Editar</button>
+    <button *ngIf="boton === 'validador' || boton === 'aprobador' "  mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(subprocesoModel.key,subprocesoModel.subprocesoStatusId,true)">Rechazar</button>
     <button *ngIf="boton === 'validador'  " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(subprocesoModel.key,subprocesoModel.subprocesoStatusId,'IV')">Validar</button>
     <button *ngIf="boton === 'aprobador' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(subprocesoModel.key,subprocesoModel.subprocesoStatusId,'IA')">Aprobar</button>
 </h6>
@@ -88,7 +88,7 @@
                                 class="img-circle"
                                 src="assets/images/excel.png"
                                 style="width: 20px; height: 20px"
-                              />Descargar Excel</button>
+                              />Generar Reporte</button>
                         </div>
                     </div>
                 </div>
