--- a/Matrizapp/src/app/componentes/rkmain/rky/rky.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/rky/rky.component.html
@@ -1,9 +1,9 @@
 <h6 class="article-title">Area > Proceso > Subproceso > Actividad > Tarea >Dimension > Riesgo > Consecuencia
     <!-- <button *ngIf="consecuenciaModel.consecuenciaStatusId !=='008' && consecuenciaModel.CanAdd==='true'|| controlesstatusa && consecuenciaModel.CanAdd==='true'" mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(consecuenciaModel.key,consecuenciaModel.consecuenciaStatusId,statusc)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button> -->
     <button *ngIf="boton === 'creador' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(consecuenciaModel.key,consecuenciaModel.consecuenciaStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
-    <button *ngIf="boton === 'validador' || boton === 'aprobador' "  mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(consecuenciaModel.key,consecuenciaModel.consecuenciaStatusId)">Editar</button>
-    <button *ngIf="boton === 'validador'  " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(consecuenciaModel.key,consecuenciaModel.consecuenciaStatusId,'IV')">Validar</button>
-    <button *ngIf="boton === 'aprobador' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(consecuenciaModel.key,consecuenciaModel.consecuenciaStatusId,'IA')">Aprobar</button>
+    <button *ngIf="boton === 'validador' || boton === 'aprobador' "  mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(consecuenciaModel.key,consecuenciaModel.consecuenciaStatusId,true)">Rechazar</button>
+    <button *ngIf="boton === 'validador'  " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(consecuenciaModel.key,consecuenciaModel.consecuenciaStatusId)">Validar</button>
+    <button *ngIf="boton === 'aprobador' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(consecuenciaModel.key,consecuenciaModel.consecuenciaStatusId)">Aprobar</button>
 
    
 </h6>
@@ -107,6 +107,16 @@
                             </mat-form-field>
                         </div>
                     </div>
+
+                    <div class="divide">
+                        
+                        <button  class="btn btn-sm btn-light btn-round pl-1"  (click)="generarReporte()"> <img
+                            class="img-circle"
+                            src="assets/images/excel.png"
+                            style="width: 20px; height: 20px"
+                          />Generar Reporte</button>
+                    
+                </div>
                 </div>
             </div>
         </div>
